# zkp-auth

./: docker-compose.yml
chaum-pedersen-zkp/: Cargo.toml
chaum-pedersen-zkp/src/: lib.rs
chaum-pedersen-zkp/src/client/: mod.rs
chaum-pedersen-zkp/src/models/: mod.rs
chaum-pedersen-zkp/src/server/: mod.rs
chaum-pedersen-zkp/src/utils/: mod.rs
client/: package.json  tsconfig.json
client/src/: App.tsx
client/src/pkg/: zkp_client.d.ts  zkp_client_bg.wasm.d.ts
zkp-client/: Cargo.toml
zkp-client/pkg/: zkp_client.js  zkp_client_bg.wasm
zkp-client/src/: lib.rs
zkp-server/: Cargo.toml
zkp-server/src/: main.rs
zkp-server/src/adapters/: http.rs  mod.rs  mongo.rs  redis.rs
zkp-server/src/models/: user_info.rs
zkp-server/src/ports/: api_port.rs  db_port.rs  mod.rs
