[package]
name = "zkp-client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
chaum-pedersen-zkp = { path = "../chaum-pedersen-zkp" }
wasm-bindgen = "0.2.87"
num-bigint = "0.4.4"
serde = { version = "1.0.190", features = ["serde_derive"] }
serde_json = "1.0.108"
