[package]
name = "zkp-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.4.0"
async-trait = "0.1.74"
bson = "2.7.0"
actix-cors = "0.6.4"
chaum-pedersen-zkp = { path = "../chaum-pedersen-zkp" }
mongodb = "2.7.0"
num-bigint = "0.4.4"
redis = "0.23.3"
redis-test = "0.2.3"
serde = { version = "*", features = ["derive"] }
serde_json = "1.0.107"
validator = { version = "0.16.1", features = ["derive"] }
